--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,11 +2,10 @@ FROM ubuntu:trusty
 MAINTAINER Feng Honglin <hfeng@tutum.co>
 
 RUN apt-get update && \
-    apt-get install -y nginx && \
+	apt-get install --no-install-recommends -y -q curl build-essential ca-certificates git mercurial bzr && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-RUN apt-get update -y && apt-get install --no-install-recommends -y -q curl build-essential ca-certificates git mercurial bzr
 RUN mkdir /goroot && curl https://storage.googleapis.com/golang/go1.4.2.linux-amd64.tar.gz | tar xvzf - -C /goroot --strip-components=1
 RUN mkdir /gopath
 
@@ -14,21 +13,17 @@ ENV GOROOT /goroot
 ENV GOPATH /gopath
 ENV PATH $PATH:$GOROOT/bin:$GOPATH/bin
 
-RUN go get -v github.com/spf13/hugo
+RUN go get -u -v github.com/spf13/hugo
 RUN go install github.com/spf13/hugo
+RUN go get -v -u github.com/mholt/caddy
+RUN go install github.com/mholt/caddy
+
+RUN which caddy
 
 ADD . /site-source
-RUN cd /site-source && \
-	hugo -t gophercon
 
-RUN cp -R /site-source/public /app/
+WORKDIR /site-source
+EXPOSE 2015
 
-
-RUN echo "daemon off;" >> /etc/nginx/nginx.conf
-ADD sites-enabled/ /etc/nginx/sites-enabled/
-#ADD app/ /app/
-
-EXPOSE 80
-
-CMD ["/usr/sbin/nginx"]
+CMD ["caddy"]
 
