--- a/docker/Caddyfile
+++ b/docker/Caddyfile
@@ -9,7 +9,7 @@ git {
 
 root /site-source/gophercon/public
 
-redir /questions http://dave.cheney.net/ 302
+redir /questions https://con.fo/gc2016 302
 
 gzip
 ext .html
